# Verification_counterpartiesV1

./: pyproject.toml
data/: info.txt  kont.csv  kont.xlsx  konto.xlsx  Анализ субконто Контрагенты за Январь 2023 г. - Декабрь 2024 г. ООО Баштепломонтаж.xls
src/: kontragets.py  proverka.py  zapros_api.py
